adding table of content list of figure, introduction, resume and abstract need to finish the abstract

--- a/Text/Methodologie_CRISP.tex
+++ b/Text/Methodologie_CRISP.tex
@@ -3,7 +3,7 @@ Au début des années 90, l'intérêt croissant  pour le data mining a mis en lu
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\textwidth]{fig/CRISP_tb.png}
-	\caption[Short caption]{Data mining process model}
+	\caption{Data mining process model}
 	\label{fig:imageCrisp}
 \end{figure} 
 A partir du processus de découverte de connaissances utilisé dans les premiers projets de data mining ,\ac{CRISP-DM} a défini et validé une méthodologie potentiellement applicable dans tous les secteurs de l'industrie. Elle permet de rendre les projets de data mining à grande échelle plus rapides, moins coûteux, plus fiables et surtout améliorer leur gestion. Cette méthodologie ne vise pas que les grands projets car même les petits projets de découverte de connaissances peuvent tirer profit de son utilisation.
