--- a/Text/NeuralNetwork.tex
+++ b/Text/NeuralNetwork.tex
@@ -22,7 +22,7 @@ Voici à quoi ressemble à quoi ressemble un neurone dans le cerveau:
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\textwidth]{fig/Neurone.png}
-	\caption[Short caption]{Un Neurone Naturel}
+	\caption{Un Neurone Naturel}
 	\label{fig:image9}
 \end{figure}
 
@@ -48,7 +48,7 @@ Il se caractérise par :
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\textwidth]{fig/SimpleANN.png}
-	\caption[Short caption]{un Perceptron  ou Unité de traitement}
+	\caption{un Perceptron  ou Unité de traitement}
 	\label{fig:image10}
 \end{figure}
 
@@ -63,7 +63,7 @@ D'une façon plus générale un  réseau des neurones est un ensemble de plusieu
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\textwidth]{fig/FullNeural.png}
-	\caption[Short caption]{un réseau des neurones complets avec 2 hidden layers }
+	\caption{un réseau des neurones complets avec 2 hidden layers }
 	\label{fig:image11}
 \end{figure}
 
@@ -84,7 +84,7 @@ On note :
 \begin{figure}[ht]
  	\centering
  	\includegraphics[width=0.5\textwidth]{fig/NeuralNtwork2.png}
- 	\caption[Short caption]{Réseaux des neurones avec des unités d'activation }
+ 	\caption{Réseaux des neurones avec des unités d'activation }
  	\label{fig:image12}
 \end{figure}\\
  Nous avons : \\
