--- a/Text/RegressionLineaire.tex
+++ b/Text/RegressionLineaire.tex
@@ -24,7 +24,7 @@ on peut le remarque sur la figure suivante ou notre hypothèse est une droite :
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\textwidth]{fig/regressionLineaire1var.png}
-	\caption[Short caption]{Régression Linéaire avec une variable}
+	\caption{Régression Linéaire avec une variable}
 	\label{fig:image1}
 \end{figure}
 
@@ -43,7 +43,7 @@ ${h}_{\theta}\left(x\right)={\theta }_{0}{x}_{0}+{\theta }_{1}{x}_{1}+{\theta }_
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\textwidth]{fig/regressionPlokynome.png}
-	\caption[Short caption]{Régression Polynomiale avec un polynôme de degré 2}
+	\caption{Régression Polynomiale avec un polynôme de degré 2}
 	\label{fig:image2}
 \end{figure}
 le travail restant sera de trouver les paramètres ${\theta }_{i}$ pour notre fonction  ${h}_{\theta}\left(x\right)$ mais comment les trouver?
@@ -85,7 +85,7 @@ On appelle l'erreur de prédiction , la valeur définie par   :
   \begin{figure}[ht]
   	\centering
   	\includegraphics[width=0.5\textwidth]{fig/regressionPlokynome.png}
-  	\caption[Short caption]{Variation de J en fonction du nombre des itérations}
+  	\caption{Variation de J en fonction du nombre des itérations}
   	\label{fig:image3}
   \end{figure}
    
