--- a/Text/RegressionLogistique.tex
+++ b/Text/RegressionLogistique.tex
@@ -29,7 +29,7 @@ Voici comment se présente cette fonction :
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\textwidth]{fig/FonctionSigm.png}
-	\caption[Short caption]{Fonction Sigmoïde}
+	\caption{Fonction Sigmoïde}
 	\label{fig:image4}
 \end{figure} \\
 On remarque que cette fonction ne prend que des valeurs comprise entre 0 et 1.
@@ -65,7 +65,7 @@ Voici comment elle se présente si on n'a que 2 attributs ${x}_{1}$ et ${x}_{2}$
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\textwidth]{fig/DecisionBoudary.png}
-	\caption[Short caption]{Frontière de décision pour la Régression Logistique à 2 variables}
+	\caption{Frontière de décision pour la Régression Logistique à 2 variables}
 	\label{fig:image5}
 \end{figure}
 
@@ -133,7 +133,7 @@ On remarque ce même phénomène avec la régression logistique .
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\textwidth]{fig/OverfiittingLogistic.png}
-	\caption[Short caption]{Overfitting et Underfitting avec la régression logistique }
+	\caption{Overfitting et Underfitting avec la régression logistique }
 	\label{fig:image8}
 \end{figure}
 \subsubsection{Solutions aux problèmes de sur apprentissage }
