--- a/Text/abreviation.tex
+++ b/Text/abreviation.tex
@@ -1,3 +1,7 @@
+\begin{center}
+	{\Large\textit{ \textbf Sigles et Abréviations}}
+\end{center}
+\addcontentsline{toc}{chapter}{Sigles et Abréviations}
 \begin{acronym}[MPC] % Give the longest label here so that the list is nicely aligned
 \acro{CRISP-DM}{Cross Industry Standard Process - Data Mining}
 \acro{REST}{Representational State Transfer}
