--- a/Text/introduction.tex
+++ b/Text/introduction.tex
@@ -4,9 +4,8 @@
 \begin{center}
 	 \textit{ \textbf Sujet : DataMining appliqué à la prédiction de l'\textbf{}orientation des élèves finalistes du secondaire à l'université }
 \end{center}
-\begin{center}
-	 {\LARGE  \textbf INTRODUCTION}	
-	\end{center}
+\chapter*{Introduction}
+	\addcontentsline{toc}{chapter}{Introduction}
 \section{Problématique}
 Arrivés à la fin de leurs études secondaires la plupart des élèves finalistes du secondaire et, futurs universitaires sont confrontés au problème de choix de filières pour poursuivre leur études universitaires.
 Plusieurs options s'offrent à eux et ainsi ils se trouvent dans un embarras de choix, la plupart d'entre eux choisissent mal leurs orientations.
