--- a/text/chapter3.tex
+++ b/text/chapter3.tex
@@ -35,7 +35,7 @@ Voici les étapes de cette phases:
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\textwidth]{fig/Exploration.png}
-	\caption[Short caption]{Étapes de la phase d'exploration des données }
+	\caption{Étapes de la phase d'exploration des données }
 	\label{fig:imageExpSt}
 \end{figure} 
 \begin{itemize}
@@ -348,14 +348,14 @@ plus prêt avec des box-plots.
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\textwidth]{fig/AGEPlot1.png}
-	\caption[Short caption]{Box Plot Attribue Diplôme Pourcentage  }
+	\caption{Box Plot Attribue Diplôme Pourcentage  }
 	\label{fig:AgeBXPlot1}
 \end{figure} 
 
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\textwidth]{fig/PercetagePlot.png}
-	\caption[Short caption]{Box Plot Attribue  Age  }
+	\caption{Box Plot Attribue  Age  }
 	\label{fig:PercBXPlot1}
 \end{figure} 
 Au vu de ces courbes nous remarquons que l'attribue diplôme pourcentage
@@ -512,7 +512,7 @@ Dans cette partie nous effectuerons les statistiques descriptives pour chaque va
 	\begin{figure}[ht]
 		\centering
 		\includegraphics[width=0.5\textwidth]{fig/DataExploration.png}
-		\caption[Short caption]{Techniques d'exploration des données en entré }
+		\caption{Techniques d'exploration des données en entré }
 		\label{fig:DataExplora}
 	\end{figure}
 	En bref nous examinerons le moyenne , le mode , l'écart-type et la
@@ -577,7 +577,7 @@ les graphiques représentent les informations sur l'age  son à la figure\ref{fi
 	\begin{figure}[!htbp]
 	\centering
 	\includegraphics[width=0.5\textwidth]{fig/NAME.png}
-	\caption[Short caption]{Distribution du sexe des étudiants }
+	\caption{Distribution du sexe des étudiants }
 	\label{fig:SEXE}
 \end{figure}
 La  la figure\ref{fig:SEXE} nous donne la  répartition de sexes dans notre ensemble d'apprentissage on peut aisément constater qu'il n'est pas si déséquilibre que ça!, le
@@ -587,7 +587,7 @@ sexe féminin.
 \begin{figure}[!htbp]
 	\centering
 	\makebox[\textwidth]{\includegraphics[width=\paperwidth]{fig/SCHOOLSTATUS.png}}
-	\caption[Short caption]{Différente statut de l'école de provenance }
+	\caption{Différente statut de l'école de provenance }
 	\label{fig:SchoolStatus}
 \end{figure}
  Dans la figure\ref{fig:SchoolStatus} nous pouvons remarquer aisément que 29\% des étudiants
@@ -601,7 +601,7 @@ Nos étudiant Proviennent des 33 écoles différentes:
 \begin{figure}[!htbp]
 	\centering
 	\makebox[\textwidth]{\includegraphics[width=\paperwidth]{fig/OPTION_RIGHT.png}}
-	\caption[Short caption]{l'option suivie à l'école secondaire }
+	\caption{l'option suivie à l'école secondaire }
 	\label{fig:Option_right}
 \end{figure}
 Sur la figure\ref{fig:Option_right} nous pouvons remarquer que la majeure partie des
@@ -620,7 +620,7 @@ les plus représentées.
 \begin{figure}[!htbp]
 	\centering
 	\makebox[\textwidth]{\includegraphics[width=\paperwidth]{fig/SCHOOL_RIGHT.png}}
-	\caption[Short caption]{les écoles de provenances  }
+	\caption{les écoles de provenances  }
 	\label{fig:SCHOOL}
 \end{figure}
 Nous pouvons remarquer aisément que le top 10 des école de provenance
@@ -634,7 +634,7 @@ l'institut de Goma avec 6\%, 5\% et 5 \% respectivement et d'autres
 \begin{figure}[!htbp]
 	\centering
 	\makebox[\textwidth]{\includegraphics[width=\paperwidth]{fig/SCHOOLPROVINCE.png}}
-	\caption[Short caption]{les provinces de provenances des étudiants   }
+	\caption{les provinces de provenances des étudiants   }
 	\label{fig:SCHOOLProvince}
 \end{figure}
 A la figure \ref{fig:SCHOOLProvince} nous pouvons aisément constater que 75 \% des étudiants
@@ -646,7 +646,7 @@ Voici comment elle se présente a la figure \ref{fig:FAC}:
 \begin{figure}[!htbp]
 	\centering
 	\makebox[\textwidth]{\includegraphics[width=\paperwidth]{fig/FAC.png}}
-	\caption[Short caption]{les Facultés }
+	\caption{les Facultés }
 	\label{fig:FAC}
 \end{figure}
  Nous remarquons la distribution des valeurs pour
@@ -789,7 +789,7 @@ Passons maintenant à l'analyser des proprement dite
  	\begin{figure}[!htbp]
  	\centering
  	\includegraphics[width=0.8\textwidth]{fig/AGE-FAC.png}\label{fig:ANOVAb}
- 	\caption[Short caption]{distribution des ages au sein des différentes facultés } 
+ 	\caption{distribution des ages au sein des différentes facultés } 
  	\end{figure}
 \subparagraph{Pourcentage}
   Également ici on rejette aussi notre hypothèse nulle qui stipulait que la
@@ -817,7 +817,7 @@ Pour Plus des détails sur les distributions statistique
 \begin{figure}[!htbp]
 	\centering
 	\includegraphics[width=0.8\textwidth]{fig/AGE-POURC.png}\label{fig:ANOVAa}
-	\caption[Short caption]{distribution des pourcentage au sein des différentes facultés } 
+	\caption{distribution des pourcentage au sein des différentes facultés } 
 \end{figure}
  \paragraph{Variables Catégorielles et Catégorielles}
  Pour ces genres de relation nous avons effectuer le test chi-carré , Dans le tableau \ref{tab:chi-Carrée} nous pouvons visualiser les  différentes valeurs et effectuer nos conclusions sur base de celle ci.\\
