--- a/text/conclusion.tex
+++ b/text/conclusion.tex
@@ -1,6 +1,5 @@
-\begin{center}
-	 {\LARGE  \textbf CONCLUSION}	
-	\end{center}
+\chapter*{Conclusion}
+\addcontentsline{toc}{chapter}{Conclusion}
 Tous au long de ce travail nous avons pu démontrer comment utiliser le DataMining sur le données issues du système d'information \ac{UAT} pour aider les nouveaux étudiant à l'université à s'orienter.\\
 Nous nous sommes posés 3 questions au départ : \\
 - \emph{Comment utiliser les techniques  du DataMining pour doter les universités des outils d'aide à la décision les permettant de bien orienter les étudiants dès leur entrée à l'université ?  }\\
