--- a/text/chapter4.tex
+++ b/text/chapter4.tex
@@ -5,9 +5,9 @@ Pour choisir l'algorithme à utiliser nous somme basée sur la documentation off
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\textwidth]{fig/sckikLearnCheatSheet.png}
-	\caption[Short caption]{sckit-Learn Algorithm cheat sheet }
+	\caption{sckit-Learn Algorithm cheat sheet }
 	\label{fig:skLearn1}
-\end{figure} 
+\end{figure}  
 
 Vu que nous disposons de moins de 100000 instances pour nos ensemble d'apprentissage et vu que notre tache était celui de prédire une variable continue (Une régression )  nous avions décidé d'entrainer les algorithmes  suivantes :
 \begin{enumerate}
@@ -40,7 +40,7 @@ Tous au long de ce chapitre nous avions suivie les étapes suivantes  sur la fig
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\textwidth]{fig/ModelBuilding.png}
-	\caption[Short caption]{étapes à suivre pour l'élaboration du modèle d'apprentissage }
+	\caption{étapes à suivre pour l'élaboration du modèle d'apprentissage }
 	\label{fig:predictiveModelBuilding}
 \end{figure} 
 \section {Préparation des données pour l'exécution des algorithmes } 
@@ -206,27 +206,6 @@ Comme nous pouvons le remarquer dans ce tableau , après entrainement et évalua
 \subsubsection{Méthodes d'ensembles}
 il a été souligné par différents auteur \cite{bookSckit-Learn} que combiner les résultat des plusieurs modèles de régressions donnent des meilleurs résultats qu'un seul modèle c'est pourquoi nous avions choisi de combiner nos 5 modèles pour obtenir un bon modèle finale ,.
 Nous avons donc décider de combiner ces résultats finales prédites par les  les 5 modèles par une régressions pour trouver le résultats finale de nos modèles .Et Notre erreur a peu être réduite à la fois sur le training et le test set dans toutes les facultés , voici au tableau \ref{tab:ensembleResults} les différentes erreurs au sein de chaque faculté .
-\begin{table}[h!]
-\centering
-\begingroup % make the next setting local
-\captionsetup{type=table} % here we want to caption a table
-\caption{Résultats de nos Modèle après application des méthodes d'ensembles }
-\label{tab:ensembleResults}
-\begin{tabular}{|c|c|c|}
-	\toprule
-	Faculté &   RMSE Train  &RMSE Test \\
-	\midrule
-	Médecine &7.045\%&9.951\%\\
-	Technologie&11.174\%&12.86\%\\
-	Économie &8.453& 10.065\%\\
-	Droit &8.344\%&11.76 \%\\
-	Santé&8.21\%&9.96\%\\
-	Psychologie&6.601\%&10.564\%\\
-	Théologie&5.32\%&9.093\% \\
-	\bottomrule
-\end{tabular}
-\endgroup
-\end{table}
 \subsection{Conclusion}
 Au chapitre précédent nous avions pu remarquer qu'il existait une forte corrélation entre le CGPA et l'option suivie par l'étudiant à l'école secondaire ,et entre l'école de provenance et le CGPA , mais nous avions aussi souligné qu'il n'existait pas de corrélation entre le CGPA et Le DIPERC mais nous avions décider de l'utiliser dans la prédiction du CGPA pour améliorer l'exactitude ne notre modèle et le rendre plus subjectif  .
 
@@ -239,5 +218,6 @@ Ces Erreurs élevées étaient dues au fait :
 \end{itemize}
 
 Pour palier a ces problème et dans le souci de réduire notre \ac{RMSE} nous avions utiliser la technique de stacking qui consistait à combiner les différentes résultats des différents modèles et à partir de ceux -ci prédire un résultat finale à l'aide d'une régression linéaire, nous avons souligné que cette technique réduisait l'erreur de prédiction considérablement et nous avions ainsi une erreur inférieur à 10\% dans certaines faculté.
- Ceci n'est qu'une première itération dans la suite nous exécuterons une seconde itération et vérifierons comment se comportera l'erreur de prédiction.   
+Ceci n'est qu'une première itération dans la suite nous exécuterons une seconde itération et vérifierons comment se comportera l'erreur de prédiction.   
 
+s
